--- a/Tiddly.html
+++ b/Tiddly.html
@@ -137,6 +137,14 @@ Error message and password prompt
 
 <li>$:/state/tab/sidebar--1835078512</li>
 
+<li>$:/state/toc/Morphology-Declensions-1680752989</li>
+
+<li>$:/state/toc/Morphology-General Morphology-1680752989</li>
+
+<li>$:/state/toc/Morphology-Parts of Speech-1680752989</li>
+
+<li>$:/state/toc/Topic-Morphology-1680752989</li>
+
 <li>$:/state/toc/Topic-Phonetics--1876907615</li>
 
 <li>$:/state/toc/Topic-Phonetics-1680752989</li>
@@ -153,15 +161,27 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Cases</li>
+
 <li>Consonants</li>
+
+<li>Declensions</li>
 
 <li>Draft of 'Writing &amp; Alphabet'</li>
 
+<li>General Morphology</li>
+
 <li>Morphology</li>
+
+<li>Nouns</li>
+
+<li>Parts of Speech</li>
 
 <li>Phonology</li>
 
 <li>Phonotactics</li>
+
+<li>Pronouns</li>
 
 <li>Table of Contents</li>
 
@@ -7848,8 +7868,20 @@ Error message and password prompt
 <div created="20160919235243426" modified="20160919235243426" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Orphans</pre>
 </div>
-<div created="20160919205204673" modified="20160919235250112" title="$:/state/tab/sidebar--1835078512">
+<div created="20160919205204673" modified="20160920133105955" title="$:/state/tab/sidebar--1835078512">
 <pre>Table of Contents</pre>
+</div>
+<div created="20160920133107171" modified="20160920133107171" title="$:/state/toc/Morphology-Declensions-1680752989">
+<pre>open</pre>
+</div>
+<div created="20160920133440635" modified="20160920133501266" title="$:/state/toc/Morphology-General Morphology-1680752989">
+<pre>close</pre>
+</div>
+<div created="20160920133439778" modified="20160920133502097" title="$:/state/toc/Morphology-Parts of Speech-1680752989">
+<pre>close</pre>
+</div>
+<div created="20160920131718873" modified="20160920133352434" title="$:/state/toc/Topic-Morphology-1680752989">
+<pre>open</pre>
 </div>
 <div created="20160919231237129" modified="20160919231237129" title="$:/state/toc/Topic-Phonetics--1876907615">
 <pre>open</pre>
@@ -7857,10 +7889,10 @@ Error message and password prompt
 <div created="20160919230756711" modified="20160919232435001" title="$:/state/toc/Topic-Phonetics-1680752989">
 <pre>open</pre>
 </div>
-<div created="20160919235152574" modified="20160919235307675" title="$:/state/toc/Topic-Phonology-1680752989">
-<pre>open</pre>
+<div created="20160919235152574" modified="20160920133459681" title="$:/state/toc/Topic-Phonology-1680752989">
+<pre>close</pre>
 </div>
-<div list="Phonotactics" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -7877,8 +7909,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20160919232436213" modified="20160919235119935" title="$:/temp/search">
-<pre>Phonetics</pre>
+<div created="20160919232436213" modified="20160920131651635" title="$:/temp/search">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.13">
 <pre>{
@@ -7989,6 +8021,19 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20160920131654486" modified="20160920133412972" tags="[[General Morphology]]" title="Cases">
+<pre>Cases, together with prepositions, are used to indicate the grammatical role of a word within a sentence. To see how a world changes depending on its case, see [[Declensions]]. &lt;br&gt;
+There are four cases: &lt;br&gt;
+
+* Ergative
+** In its principal use (without prepositions), the ergative case identifies the entity to which the action is applied: this is similar to the english subject in passive sentences, or the direct object in active sentences. Used with prepositions, the ergative case confers a sense of locality, aboutness
+* Absolutive
+** In its principal use, the absolutive case identifies the entity that is performing the action: this is similar to the english subject in active sentences, or the agent in passive sentences. Used with prepositions, it confers a sense of origin, movement from.
+* Dative
+** In its principal use, the dative case identifies the indirect object, that is the object towards whom the action is performed. Used with prepositions, it confers a sense of movement towards, destination
+* Genitive
+** In its principal use, the genitive specifies the owner of something, or the set to which something else belongs to. It is also used when numbering things. It usually appears before the word which identifies the entity belonging. It is not used with prepositons.</pre>
+</div>
 <div created="20160919230216741" modified="20160919235156422" tags="Phonology" title="Consonants">
 <pre>|              |!Bilabial |!Labiodental |!Dental |!Alveolar |!Postalveolar |!Palatal |!Velar |
 |Plosives |b p        |                     |            |t d            |                     |               |k g     |
@@ -8001,16 +8046,31 @@ Error message and password prompt
 &lt;br&gt;
 To see how these consonants are written, consult [[Writing &amp; Alphabet]]</pre>
 </div>
+<div created="20160920131725829" list-after="Cases" modified="20160920133424709" tags="[[General Morphology]]" title="Declensions">
+<pre></pre>
+</div>
 <div modified="20160919232929375" title="Draft of 'Writing &amp; Alphabet'">
 <pre></pre>
 </div>
+<div created="20160920133224638" modified="20160920133252013" tags="Morphology" title="General Morphology">
+<pre></pre>
+</div>
 <div created="20160919210301501" list-after="Phonology" modified="20160919235041434" tags="Topic" title="Morphology" type="">
+<pre></pre>
+</div>
+<div created="20160920133146038" modified="20160920133438187" tags="[[Parts of Speech]]" title="Nouns">
+<pre></pre>
+</div>
+<div created="20160920133321295" modified="20160920133341119" tags="Morphology" title="Parts of Speech">
 <pre></pre>
 </div>
 <div created="20160919210755827" modified="20160919235044436" tags="Topic" title="Phonology">
 <pre></pre>
 </div>
 <div created="20160919235206487" list-after="Vowels" modified="20160919235233931" tags="Phonology" title="Phonotactics">
+<pre></pre>
+</div>
+<div created="20160920133153197" modified="20160920133450909" tags="[[Parts of Speech]]" title="Pronouns">
 <pre></pre>
 </div>
 <div created="20160919211757582" list-before="$:/core/ui/SideBar/Open" modified="20160919211759731" tags="$:/tags/SideBar" title="Table of Contents" type="text/vnd.tiddlywiki">
