--- a/Tiddly.html
+++ b/Tiddly.html
@@ -139,9 +139,15 @@ Error message and password prompt
 
 <li>$:/state/toc/Morphology-Declensions-1680752989</li>
 
+<li>$:/state/toc/Morphology-General Morphology--1876907615</li>
+
 <li>$:/state/toc/Morphology-General Morphology-1680752989</li>
 
+<li>$:/state/toc/Morphology-Parts of Speech--1876907615</li>
+
 <li>$:/state/toc/Morphology-Parts of Speech-1680752989</li>
+
+<li>$:/state/toc/Topic-Morphology--1876907615</li>
 
 <li>$:/state/toc/Topic-Morphology-1680752989</li>
 
@@ -160,6 +166,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>Adjectives</li>
 
 <li>Cases</li>
 
@@ -181,9 +189,13 @@ Error message and password prompt
 
 <li>Phonotactics</li>
 
+<li>Prepositions</li>
+
 <li>Pronouns</li>
 
 <li>Table of Contents</li>
+
+<li>Verbs</li>
 
 <li>Vowels</li>
 
@@ -7874,11 +7886,20 @@ Error message and password prompt
 <div created="20160920133107171" modified="20160920133107171" title="$:/state/toc/Morphology-Declensions-1680752989">
 <pre>open</pre>
 </div>
+<div created="20160921001748004" modified="20160921001748004" title="$:/state/toc/Morphology-General Morphology--1876907615">
+<pre>open</pre>
+</div>
 <div created="20160920133440635" modified="20160920133501266" title="$:/state/toc/Morphology-General Morphology-1680752989">
 <pre>close</pre>
 </div>
+<div created="20160921001704853" modified="20160921001704853" title="$:/state/toc/Morphology-Parts of Speech--1876907615">
+<pre>open</pre>
+</div>
 <div created="20160920133439778" modified="20160920133502097" title="$:/state/toc/Morphology-Parts of Speech-1680752989">
 <pre>close</pre>
+</div>
+<div created="20160921001657986" modified="20160921001657986" title="$:/state/toc/Topic-Morphology--1876907615">
+<pre>open</pre>
 </div>
 <div created="20160920131718873" modified="20160920133352434" title="$:/state/toc/Topic-Morphology-1680752989">
 <pre>open</pre>
@@ -7892,7 +7913,7 @@ Error message and password prompt
 <div created="20160919235152574" modified="20160920133459681" title="$:/state/toc/Topic-Phonology-1680752989">
 <pre>close</pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="Nouns" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8021,6 +8042,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20160921001709047" modified="20160921001717491" tags="[[Parts of Speech]]" title="Adjectives">
+<pre></pre>
+</div>
 <div created="20160920131654486" modified="20160920133412972" tags="[[General Morphology]]" title="Cases">
 <pre>Cases, together with prepositions, are used to indicate the grammatical role of a word within a sentence. To see how a world changes depending on its case, see [[Declensions]]. &lt;br&gt;
 There are four cases: &lt;br&gt;
@@ -8058,8 +8082,50 @@ To see how these consonants are written, consult [[Writing &amp; Alphabet]]</pre
 <div created="20160919210301501" list-after="Phonology" modified="20160919235041434" tags="Topic" title="Morphology" type="">
 <pre></pre>
 </div>
-<div created="20160920133146038" modified="20160920133438187" tags="[[Parts of Speech]]" title="Nouns">
-<pre></pre>
+<div created="20160920133146038" modified="20160921005653738" tags="[[Parts of Speech]]" title="Nouns">
+<pre>Nouns, just like in English, represent entities which perform action and about whom statements can be made. Unlike english however, in $LANGUAGE$ nouns do not only conjugate in number but also in [[case|Declensions]]. &lt;br&gt;
+
+Each noun has a gender - which represents what `kind` of item it is. There are four genders: masculine, feminine, neuter and abstract. The first two behave like in english - the third only refers to concrete objects, while the last refers to ideas, organizations, and other abstract concepts. For each gender, we have the following singular declension:
+
+|!Female Declension | i stem|
+|!Ergative|-i |
+|!Absolutive|-e|
+|!Dative|-is |
+|!Genitive|-in|
+
+|!Male Declension| o stem|
+|!Ergative|-o|
+|!Absolutive|-e|
+|!Dative|-os|
+|!Genitive|-on|
+
+|!Neuter Declension| a stem|
+|!Ergative|-a|
+|!Absolutive|-ae|
+|!Dative|-as|
+|!Genitive|-an|
+
+|!Abstract Declension| ou/y stem|
+|!Ergative|-ou|
+|!Absolutive|-eu|
+|!Dative|-ys|
+|!Genitive|-yn|
+
+We then have the following plural declensions: one for Masculine/Feminine (Personal), one for Neuter/Abstract(Impersonal)
+
+|!Personal Plural Declension| -e |
+|!Ergative|-|
+|!Absolutive|-eu|
+|!Dative|-ys|
+|!Genitive|-yn|
+
+
+|!Impersonal Plural Declension| -o |
+|!Ergative|-ou|
+|!Absolutive|-eu|
+|!Dative|-ys|
+|!Genitive|-yn|
+</pre>
 </div>
 <div created="20160920133321295" modified="20160920133341119" tags="Morphology" title="Parts of Speech">
 <pre></pre>
@@ -8068,6 +8134,9 @@ To see how these consonants are written, consult [[Writing &amp; Alphabet]]</pre
 <pre></pre>
 </div>
 <div created="20160919235206487" list-after="Vowels" modified="20160919235233931" tags="Phonology" title="Phonotactics">
+<pre></pre>
+</div>
+<div created="20160921001720937" modified="20160921001741225" tags="[[Parts of Speech]]" title="Prepositions">
 <pre></pre>
 </div>
 <div created="20160920133153197" modified="20160920133450909" tags="[[Parts of Speech]]" title="Pronouns">
@@ -8080,6 +8149,9 @@ To see how these consonants are written, consult [[Writing &amp; Alphabet]]</pre
 
 &lt;/div&gt;
 </pre>
+</div>
+<div created="20160921001720939" modified="20160921001727930" tags="[[Parts of Speech]]" title="Verbs">
+<pre></pre>
 </div>
 <div created="20160919232334916" modified="20160919235147382" tags="Phonology" title="Vowels" type="text/vnd.tiddlywiki">
 <pre>There are six vowels in the language. Since vowels are touchy stuff, examples are given in English, assuming [[received pronounciation|Received Pronounciation]]:&lt;br&gt;
