--- a/Tiddly.html
+++ b/Tiddly.html
@@ -125,11 +125,15 @@ Error message and password prompt
 
 <li>$:/DefaultTiddlers</li>
 
+<li>$:/Import</li>
+
 <li>$:/isEncrypted</li>
 
 <li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/sidebar</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -169,6 +173,8 @@ Error message and password prompt
 
 <li>Adjectives</li>
 
+<li>Articles</li>
+
 <li>Cases</li>
 
 <li>Consonants</li>
@@ -178,6 +184,8 @@ Error message and password prompt
 <li>Draft of 'Writing &amp; Alphabet'</li>
 
 <li>General Morphology</li>
+
+<li>Language examples</li>
 
 <li>Morphology</li>
 
@@ -196,6 +204,8 @@ Error message and password prompt
 <li>Table of Contents</li>
 
 <li>Verbs</li>
+
+<li>Vocabulary</li>
 
 <li>Vowels</li>
 
@@ -7865,6 +7875,16 @@ Error message and password prompt
 <div created="20160919210811858" modified="20160919210819122" title="$:/DefaultTiddlers">
 <pre>[[Table of Contents]]</pre>
 </div>
+<div plugin-type="import" status="pending" title="$:/Import" type="application/json">
+<pre>{
+    &quot;tiddlers&quot;: {
+        &quot;Untitled&quot;: {
+            &quot;text&quot;: &quot;&lt;span style=\&quot;color: rgb(51, 51, 51); font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', 'DejaVu Sans', sans-serif; font-size: 15px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 22px; orphans: auto; text-align: -webkit-center; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);\&quot;&gt;&lt;span class=\&quot;Apple-converted-space\&quot;&gt; &lt;/span&gt;&lt;/span&gt;&quot;,
+            &quot;title&quot;: &quot;Untitled&quot;
+        }
+    }
+}</pre>
+</div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
@@ -7873,6 +7893,9 @@ Error message and password prompt
 </div>
 <div created="20160919205213713" modified="20160919205215785" title="$:/SiteTitle">
 <pre>Conlang</pre>
+</div>
+<div created="20160921200733907" modified="20160921200734723" title="$:/state/sidebar">
+<pre>yes</pre>
 </div>
 <div created="20160919211622421" modified="20160919211640198" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
@@ -7889,19 +7912,19 @@ Error message and password prompt
 <div created="20160921001748004" modified="20160921001748004" title="$:/state/toc/Morphology-General Morphology--1876907615">
 <pre>open</pre>
 </div>
-<div created="20160920133440635" modified="20160920133501266" title="$:/state/toc/Morphology-General Morphology-1680752989">
+<div created="20160920133440635" modified="20160922005442140" title="$:/state/toc/Morphology-General Morphology-1680752989">
 <pre>close</pre>
 </div>
 <div created="20160921001704853" modified="20160921001704853" title="$:/state/toc/Morphology-Parts of Speech--1876907615">
 <pre>open</pre>
 </div>
-<div created="20160920133439778" modified="20160920133502097" title="$:/state/toc/Morphology-Parts of Speech-1680752989">
-<pre>close</pre>
+<div created="20160920133439778" modified="20160922005443049" title="$:/state/toc/Morphology-Parts of Speech-1680752989">
+<pre>open</pre>
 </div>
 <div created="20160921001657986" modified="20160921001657986" title="$:/state/toc/Topic-Morphology--1876907615">
 <pre>open</pre>
 </div>
-<div created="20160920131718873" modified="20160920133352434" title="$:/state/toc/Topic-Morphology-1680752989">
+<div created="20160920131718873" modified="20160922005427290" title="$:/state/toc/Topic-Morphology-1680752989">
 <pre>open</pre>
 </div>
 <div created="20160919231237129" modified="20160919231237129" title="$:/state/toc/Topic-Phonetics--1876907615">
@@ -7910,10 +7933,10 @@ Error message and password prompt
 <div created="20160919230756711" modified="20160919232435001" title="$:/state/toc/Topic-Phonetics-1680752989">
 <pre>open</pre>
 </div>
-<div created="20160919235152574" modified="20160920133459681" title="$:/state/toc/Topic-Phonology-1680752989">
+<div created="20160919235152574" modified="20160922005425575" title="$:/state/toc/Topic-Phonology-1680752989">
 <pre>close</pre>
 </div>
-<div list="Nouns" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -7930,8 +7953,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20160919232436213" modified="20160920131651635" title="$:/temp/search">
-<pre></pre>
+<div created="20160919232436213" modified="20160922001035776" title="$:/temp/search">
+<pre>Language Examples</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.13">
 <pre>{
@@ -8045,6 +8068,9 @@ Error message and password prompt
 <div created="20160921001709047" modified="20160921001717491" tags="[[Parts of Speech]]" title="Adjectives">
 <pre></pre>
 </div>
+<div created="20160922005458682" modified="20160922005507971" tags="[[Parts of Speech]]" title="Articles">
+<pre></pre>
+</div>
 <div created="20160920131654486" modified="20160920133412972" tags="[[General Morphology]]" title="Cases">
 <pre>Cases, together with prepositions, are used to indicate the grammatical role of a word within a sentence. To see how a world changes depending on its case, see [[Declensions]]. &lt;br&gt;
 There are four cases: &lt;br&gt;
@@ -8079,10 +8105,13 @@ To see how these consonants are written, consult [[Writing &amp; Alphabet]]</pre
 <div created="20160920133224638" modified="20160920133252013" tags="Morphology" title="General Morphology">
 <pre></pre>
 </div>
+<div created="20160922001036991" list-after="Vocabulary" modified="20160922001057564" tags="Topic" title="Language examples">
+<pre></pre>
+</div>
 <div created="20160919210301501" list-after="Phonology" modified="20160919235041434" tags="Topic" title="Morphology" type="">
 <pre></pre>
 </div>
-<div created="20160920133146038" modified="20160921005653738" tags="[[Parts of Speech]]" title="Nouns">
+<div created="20160920133146038" modified="20160922000955390" tags="[[Parts of Speech]]" title="Nouns">
 <pre>Nouns, just like in English, represent entities which perform action and about whom statements can be made. Unlike english however, in $LANGUAGE$ nouns do not only conjugate in number but also in [[case|Declensions]]. &lt;br&gt;
 
 Each noun has a gender - which represents what `kind` of item it is. There are four genders: masculine, feminine, neuter and abstract. The first two behave like in english - the third only refers to concrete objects, while the last refers to ideas, organizations, and other abstract concepts. For each gender, we have the following singular declension:
@@ -8105,26 +8134,26 @@ Each noun has a gender - which represents what `kind` of item it is. There are f
 |!Dative|-as|
 |!Genitive|-an|
 
-|!Abstract Declension| ou/y stem|
-|!Ergative|-ou|
+|!Abstract Declension| y stem|
+|!Ergative|-y|
 |!Absolutive|-eu|
 |!Dative|-ys|
 |!Genitive|-yn|
 
 We then have the following plural declensions: one for Masculine/Feminine (Personal), one for Neuter/Abstract(Impersonal)
 
-|!Personal Plural Declension| -e |
-|!Ergative|-|
-|!Absolutive|-eu|
-|!Dative|-ys|
-|!Genitive|-yn|
+|!Personal Plural Declension| -es stem |
+|!Ergative|-es |
+|!Absolutive|-ese |
+|!Dative|-eg|
+|!Genitive|-eni|
 
 
-|!Impersonal Plural Declension| -o |
-|!Ergative|-ou|
-|!Absolutive|-eu|
-|!Dative|-ys|
-|!Genitive|-yn|
+|!Impersonal Plural Declension| -os |
+|!Ergative|-os|
+|!Absolutive|-ose|
+|!Dative|-og|
+|!Genitive|-oni|
 </pre>
 </div>
 <div created="20160920133321295" modified="20160920133341119" tags="Morphology" title="Parts of Speech">
@@ -8136,11 +8165,50 @@ We then have the following plural declensions: one for Masculine/Feminine (Perso
 <div created="20160919235206487" list-after="Vowels" modified="20160919235233931" tags="Phonology" title="Phonotactics">
 <pre></pre>
 </div>
-<div created="20160921001720937" modified="20160921001741225" tags="[[Parts of Speech]]" title="Prepositions">
-<pre></pre>
+<div created="20160921001720937" modified="20160922005342616" tags="[[Parts of Speech]]" title="Prepositions">
+<pre>Prepositions are immutable words (that do not decline/conjugate) of fixed meaning, used togheter with other parts of speech in order to add or modify their meaning.
+&lt;br&gt;
+$LANGUAGE$'s prepositions work slightly different then in English: each preposition specifies a general area of meaning, and then composition with the case of the referring noun/pronoun determines the full meaning (this almost always work according to the principle that ergative is the static case, dative the direction towards case and absolutive the source case).
+In the table below, +e/a/d mean &quot;in conjuction with ergative/absolutive/dative&quot;
+&lt;br&gt;
+Note: the list of preposition might seem far to small and not exhaustive compared to English (or many other PIE languages). There are two reasons for this: first, each preposition really maps to more English ones. Secondly, many constructs that in English would be rendered through prepositions (for example the difference between in and through, or saying &quot;above&quot; and &quot;below&quot;) are rendered in $LANGUAGE$ with the use of other constructions, generally involving nouns (for example &quot;Above the chimney&quot; can be rendered as &quot;In the abovness of the chimney&quot;)
+
+|!Preposition|Description|Meanings|
+|ke|Spatial location|+e=&quot;in location/through location&quot;, +a &quot;from location&quot;, +d &quot;to location&quot;|
+|yn|Temporal location|+e= &quot;on X&quot;, +a &quot;after X&quot;, +d &quot;before X&quot;|
+|li|Purpose|+e=&quot;for the achievement of X&quot;,+d=&quot;for the benefit/use of/achievment of X&quot;|
+</pre>
 </div>
-<div created="20160920133153197" modified="20160920133450909" tags="[[Parts of Speech]]" title="Pronouns">
-<pre></pre>
+<div created="20160920133153197" modified="20160922001011500" tags="[[Parts of Speech]]" title="Pronouns">
+<pre>Pronouns, just like in English, act as referrants for various concepts in the phrase. Pronouns are [[declined just like nouns|Nouns]], and according to gender and number. &lt;br&gt;
+
+Personal pronouns:&lt;br&gt;
+
+|!Root|!English equivalent|
+|Sish-|I/We|
+|Vas- |You/You plural |
+|Kan- |He/She/It/They|
+
+Demonstrative pronouns:&lt;br&gt;
+
+|!Root |!English equivalent |
+|Ett- |This |
+|Ell- |That |
+
+Relative pronouns: &lt;br&gt;
+
+|!Root|!English equivalent|
+|K-|Who/Which|
+
+Interrogative pronouns &lt;br&gt;
+
+|!Root|!English equivalent|
+|G-|Who/Which|
+
+Indefinite pronouns &lt;br&gt;
+
+|!Root|!English equivalent|
+</pre>
 </div>
 <div created="20160919211757582" list-before="$:/core/ui/SideBar/Open" modified="20160919211759731" tags="$:/tags/SideBar" title="Table of Contents" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
@@ -8151,6 +8219,9 @@ We then have the following plural declensions: one for Masculine/Feminine (Perso
 </pre>
 </div>
 <div created="20160921001720939" modified="20160921001727930" tags="[[Parts of Speech]]" title="Verbs">
+<pre></pre>
+</div>
+<div created="20160922001103231" list-after="Writing &amp; Alphabet" modified="20160922001120906" tags="Topic" title="Vocabulary">
 <pre></pre>
 </div>
 <div created="20160919232334916" modified="20160919235147382" tags="Phonology" title="Vowels" type="text/vnd.tiddlywiki">
