Added basic verbs, basic derivation and some examples

--- a/Tiddly.html
+++ b/Tiddly.html
@@ -209,6 +209,8 @@ Error message and password prompt
 
 <li>Vowels</li>
 
+<li>Word derivation</li>
+
 <li>Writing &amp; Alphabet</li>
 
 </ul>
@@ -7912,7 +7914,7 @@ Error message and password prompt
 <div created="20160921001748004" modified="20160921001748004" title="$:/state/toc/Morphology-General Morphology--1876907615">
 <pre>open</pre>
 </div>
-<div created="20160920133440635" modified="20160922005442140" title="$:/state/toc/Morphology-General Morphology-1680752989">
+<div created="20160920133440635" modified="20160923083539138" title="$:/state/toc/Morphology-General Morphology-1680752989">
 <pre>close</pre>
 </div>
 <div created="20160921001704853" modified="20160921001704853" title="$:/state/toc/Morphology-Parts of Speech--1876907615">
@@ -7933,10 +7935,10 @@ Error message and password prompt
 <div created="20160919230756711" modified="20160919232435001" title="$:/state/toc/Topic-Phonetics-1680752989">
 <pre>open</pre>
 </div>
-<div created="20160919235152574" modified="20160922005425575" title="$:/state/toc/Topic-Phonology-1680752989">
-<pre>close</pre>
+<div created="20160919235152574" modified="20160923082931949" title="$:/state/toc/Topic-Phonology-1680752989">
+<pre>open</pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="Nouns Pronouns [[Language examples]] Vocabulary" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -7953,8 +7955,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20160919232436213" modified="20160922001035776" title="$:/temp/search">
-<pre>Language Examples</pre>
+<div created="20160919232436213" modified="20160923082043763" title="$:/temp/search">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.13">
 <pre>{
@@ -8084,12 +8086,12 @@ There are four cases: &lt;br&gt;
 * Genitive
 ** In its principal use, the genitive specifies the owner of something, or the set to which something else belongs to. It is also used when numbering things. It usually appears before the word which identifies the entity belonging. It is not used with prepositons.</pre>
 </div>
-<div created="20160919230216741" modified="20160919235156422" tags="Phonology" title="Consonants">
+<div created="20160919230216741" modified="20160923083012450" tags="Phonology" title="Consonants">
 <pre>|              |!Bilabial |!Labiodental |!Dental |!Alveolar |!Postalveolar |!Palatal |!Velar |
 |Plosives |b p        |                     |            |t d            |                     |               |k g     |
 |Nasal     |m          |                      |n          |                |                     |               |         |
 |Tap        |             |                      |            |ɾ               |                     |              |         |
-|Fricative|             |f v                  |            |s               |ʃ                    |               |x       |
+|Fricative|              |f v                  |θ          |s               |ʃ                   |               |x       |
 |Approximant |      |                      |            |l               |j                    |               |ɰ       |
 |Other    | w ʍ t͡s   |                      |            |                |                     |              |          |
 
@@ -8105,8 +8107,8 @@ To see how these consonants are written, consult [[Writing &amp; Alphabet]]</pre
 <div created="20160920133224638" modified="20160920133252013" tags="Morphology" title="General Morphology">
 <pre></pre>
 </div>
-<div created="20160922001036991" list-after="Vocabulary" modified="20160922001057564" tags="Topic" title="Language examples">
-<pre></pre>
+<div created="20160922001036991" list-after="Vocabulary" modified="20160923090528639" tags="Topic" title="Language examples">
+<pre>Etto sishe ma fusath - I buy this</pre>
 </div>
 <div created="20160919210301501" list-after="Phonology" modified="20160919235041434" tags="Topic" title="Morphology" type="">
 <pre></pre>
@@ -8218,11 +8220,26 @@ Indefinite pronouns &lt;br&gt;
 &lt;/div&gt;
 </pre>
 </div>
-<div created="20160921001720939" modified="20160921001727930" tags="[[Parts of Speech]]" title="Verbs">
-<pre></pre>
+<div created="20160921001720939" modified="20160923084814934" tags="[[Parts of Speech]]" title="Verbs">
+<pre>Just like in English, verbs express actions, and they form the core of the sentence - depending on the verb, the rest of the words assume their grammatical roles.
+&lt;br&gt;
+Verbs in $LANGUAGE$ are conjugated, based on their mood-tense. In its basic form, a verb  with the -ath suffix expresses the infinite mood: this refers to the verb itself. The infinite is rarely found alone however: in most cases, the verb is conjugated into some other tense. Such conjugation is not formed by replacing the suffix (as in noun declensions), but instead by adding, immediately before the verb at the infinitive, a particular preposition. The following table gives an overall layout of this arrangement
+&lt;br&gt;
+
+|!Tense|!Preposition|!English equivalent/Usage|
+|Infinitive| ∅ |Infinitive|
+|Perfect Present| ma |I go |
+|Imperfect Present| mos |I am going |
+|Perfect Past | tha |I went |
+|Imperfect Past| gos |I was going |
+|Perfect Future| di |I will have gone |
+|Imperfect Future| dis |I will be going|
+
+
+</pre>
 </div>
-<div created="20160922001103231" list-after="Writing &amp; Alphabet" modified="20160922001120906" tags="Topic" title="Vocabulary">
-<pre></pre>
+<div created="20160922001103231" list-after="Writing &amp; Alphabet" modified="20160923090355246" tags="Topic" title="Vocabulary">
+<pre>Fusath - To buy/to purchase</pre>
 </div>
 <div created="20160919232334916" modified="20160919235147382" tags="Phonology" title="Vowels" type="text/vnd.tiddlywiki">
 <pre>There are six vowels in the language. Since vowels are touchy stuff, examples are given in English, assuming [[received pronounciation|Received Pronounciation]]:&lt;br&gt;
@@ -8236,11 +8253,23 @@ Indefinite pronouns &lt;br&gt;
 To see how these vowels are written, consult [[Writing &amp; Alphabet]]
 </pre>
 </div>
-<div created="20160919232450561" list-after="Morphology" modified="20160919235106649" tags="Topic" title="Writing &amp; Alphabet" type="text/vnd.tiddlywiki">
+<div created="20160923083503484" modified="20160923090309567" tags="[[General Morphology]]" title="Word derivation">
+<pre>In $LANGUAGE$, many of the open parts of speech (nouns, adjective and verbs, adverbs), do not have their own roots, but are instead derived from other parts of speech. Alternatively, one could say that the same root is reused in different parts of speech, and one can infer precisely which one is referred by the word's declination and context. This also means that the dictionary entry for an open word is just their root.
+&lt;br&gt;
+Here are the rules for deriving words (reverse them to obtain the root). In the following list, let's use the root Fus- (Fusath meaning to buy)
+
+
+*From the root, and -ath to generate the infinite verb. Fusath = to buy
+*From the root, decline as a noun for &quot;the thing which receives (ergative) the verb. Fusi/fuso = the purchased
+*From the root, add the infix -ten- and then decline as a noun for &quot;the thing that performs (absolutive) the verb&quot;. Fusteni/Fusteno = the buyer
+</pre>
+</div>
+<div created="20160919232450561" list-after="Morphology" modified="20160923083035522" tags="Topic" title="Writing &amp; Alphabet" type="text/vnd.tiddlywiki">
 <pre>In general, latin letters represent the sound which uses the same symbol in the phonetic alphabet. For consonants which do not have a corresponding latin character, the following letter (or series of letters) are used:
 
 |!Latin glyphs |!Phonetic equivalent |
 | r | ɾ |
+| th | θ |
 | sh | ʃ |
 | z   |  t͡s |
 | xh | ɰ |
