Resetted tiddly in view of new language building

--- a/Tiddly.html
+++ b/Tiddly.html
@@ -159,6 +159,8 @@ Error message and password prompt
 
 <li>$:/state/toc/Topic-Phonetics-1680752989</li>
 
+<li>$:/state/toc/Topic-Phonology--1876907615</li>
+
 <li>$:/state/toc/Topic-Phonology-1680752989</li>
 
 <li>$:/StoryList</li>
@@ -7923,8 +7925,8 @@ Error message and password prompt
 <div created="20160920133439778" modified="20160922005443049" title="$:/state/toc/Morphology-Parts of Speech-1680752989">
 <pre>open</pre>
 </div>
-<div created="20160921001657986" modified="20160921001657986" title="$:/state/toc/Topic-Morphology--1876907615">
-<pre>open</pre>
+<div created="20160921001657986" modified="20170121031335403" title="$:/state/toc/Topic-Morphology--1876907615">
+<pre>close</pre>
 </div>
 <div created="20160920131718873" modified="20160922005427290" title="$:/state/toc/Topic-Morphology-1680752989">
 <pre>open</pre>
@@ -7935,10 +7937,13 @@ Error message and password prompt
 <div created="20160919230756711" modified="20160919232435001" title="$:/state/toc/Topic-Phonetics-1680752989">
 <pre>open</pre>
 </div>
+<div created="20170121031339939" modified="20170121031339939" title="$:/state/toc/Topic-Phonology--1876907615">
+<pre>open</pre>
+</div>
 <div created="20160919235152574" modified="20160923082931949" title="$:/state/toc/Topic-Phonology-1680752989">
 <pre>open</pre>
 </div>
-<div list="Nouns Pronouns [[Language examples]] Vocabulary" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8086,11 +8091,11 @@ There are four cases: &lt;br&gt;
 * Genitive
 ** In its principal use, the genitive specifies the owner of something, or the set to which something else belongs to. It is also used when numbering things. It usually appears before the word which identifies the entity belonging. It is not used with prepositons.</pre>
 </div>
-<div created="20160919230216741" modified="20160923083012450" tags="Phonology" title="Consonants">
+<div created="20160919230216741" modified="20170121031226476" tags="Phonology" title="Consonants">
 <pre>|              |!Bilabial |!Labiodental |!Dental |!Alveolar |!Postalveolar |!Palatal |!Velar |
 |Plosives |b p        |                     |            |t d            |                     |               |k g     |
 |Nasal     |m          |                      |n          |                |                     |               |         |
-|Tap        |             |                      |            |ɾ               |                     |              |         |
+|Tap        |             |                      |            |                |                     |              |         |
 |Fricative|              |f v                  |θ          |s               |ʃ                   |               |x       |
 |Approximant |      |                      |            |l               |j                    |               |ɰ       |
 |Other    | w ʍ t͡s   |                      |            |                |                     |              |          |
@@ -8107,56 +8112,14 @@ To see how these consonants are written, consult [[Writing &amp; Alphabet]]</pre
 <div created="20160920133224638" modified="20160920133252013" tags="Morphology" title="General Morphology">
 <pre></pre>
 </div>
-<div created="20160922001036991" list-after="Vocabulary" modified="20160923090528639" tags="Topic" title="Language examples">
-<pre>Etto sishe ma fusath - I buy this</pre>
+<div created="20160922001036991" list-after="Vocabulary" modified="20170121031320122" tags="Topic" title="Language examples">
+<pre></pre>
 </div>
 <div created="20160919210301501" list-after="Phonology" modified="20160919235041434" tags="Topic" title="Morphology" type="">
 <pre></pre>
 </div>
-<div created="20160920133146038" modified="20160922000955390" tags="[[Parts of Speech]]" title="Nouns">
-<pre>Nouns, just like in English, represent entities which perform action and about whom statements can be made. Unlike english however, in $LANGUAGE$ nouns do not only conjugate in number but also in [[case|Declensions]]. &lt;br&gt;
-
-Each noun has a gender - which represents what `kind` of item it is. There are four genders: masculine, feminine, neuter and abstract. The first two behave like in english - the third only refers to concrete objects, while the last refers to ideas, organizations, and other abstract concepts. For each gender, we have the following singular declension:
-
-|!Female Declension | i stem|
-|!Ergative|-i |
-|!Absolutive|-e|
-|!Dative|-is |
-|!Genitive|-in|
-
-|!Male Declension| o stem|
-|!Ergative|-o|
-|!Absolutive|-e|
-|!Dative|-os|
-|!Genitive|-on|
-
-|!Neuter Declension| a stem|
-|!Ergative|-a|
-|!Absolutive|-ae|
-|!Dative|-as|
-|!Genitive|-an|
-
-|!Abstract Declension| y stem|
-|!Ergative|-y|
-|!Absolutive|-eu|
-|!Dative|-ys|
-|!Genitive|-yn|
-
-We then have the following plural declensions: one for Masculine/Feminine (Personal), one for Neuter/Abstract(Impersonal)
-
-|!Personal Plural Declension| -es stem |
-|!Ergative|-es |
-|!Absolutive|-ese |
-|!Dative|-eg|
-|!Genitive|-eni|
-
-
-|!Impersonal Plural Declension| -os |
-|!Ergative|-os|
-|!Absolutive|-ose|
-|!Dative|-og|
-|!Genitive|-oni|
-</pre>
+<div created="20160920133146038" modified="20170121031244586" tags="[[Parts of Speech]]" title="Nouns">
+<pre></pre>
 </div>
 <div created="20160920133321295" modified="20160920133341119" tags="Morphology" title="Parts of Speech">
 <pre></pre>
@@ -8167,19 +8130,8 @@ We then have the following plural declensions: one for Masculine/Feminine (Perso
 <div created="20160919235206487" list-after="Vowels" modified="20160919235233931" tags="Phonology" title="Phonotactics">
 <pre></pre>
 </div>
-<div created="20160921001720937" modified="20160922005342616" tags="[[Parts of Speech]]" title="Prepositions">
-<pre>Prepositions are immutable words (that do not decline/conjugate) of fixed meaning, used togheter with other parts of speech in order to add or modify their meaning.
-&lt;br&gt;
-$LANGUAGE$'s prepositions work slightly different then in English: each preposition specifies a general area of meaning, and then composition with the case of the referring noun/pronoun determines the full meaning (this almost always work according to the principle that ergative is the static case, dative the direction towards case and absolutive the source case).
-In the table below, +e/a/d mean &quot;in conjuction with ergative/absolutive/dative&quot;
-&lt;br&gt;
-Note: the list of preposition might seem far to small and not exhaustive compared to English (or many other PIE languages). There are two reasons for this: first, each preposition really maps to more English ones. Secondly, many constructs that in English would be rendered through prepositions (for example the difference between in and through, or saying &quot;above&quot; and &quot;below&quot;) are rendered in $LANGUAGE$ with the use of other constructions, generally involving nouns (for example &quot;Above the chimney&quot; can be rendered as &quot;In the abovness of the chimney&quot;)
-
-|!Preposition|Description|Meanings|
-|ke|Spatial location|+e=&quot;in location/through location&quot;, +a &quot;from location&quot;, +d &quot;to location&quot;|
-|yn|Temporal location|+e= &quot;on X&quot;, +a &quot;after X&quot;, +d &quot;before X&quot;|
-|li|Purpose|+e=&quot;for the achievement of X&quot;,+d=&quot;for the benefit/use of/achievment of X&quot;|
-</pre>
+<div created="20160921001720937" modified="20170121031255107" tags="[[Parts of Speech]]" title="Prepositions">
+<pre></pre>
 </div>
 <div created="20160920133153197" modified="20160922001011500" tags="[[Parts of Speech]]" title="Pronouns">
 <pre>Pronouns, just like in English, act as referrants for various concepts in the phrase. Pronouns are [[declined just like nouns|Nouns]], and according to gender and number. &lt;br&gt;
@@ -8220,26 +8172,11 @@ Indefinite pronouns &lt;br&gt;
 &lt;/div&gt;
 </pre>
 </div>
-<div created="20160921001720939" modified="20160923084814934" tags="[[Parts of Speech]]" title="Verbs">
-<pre>Just like in English, verbs express actions, and they form the core of the sentence - depending on the verb, the rest of the words assume their grammatical roles.
-&lt;br&gt;
-Verbs in $LANGUAGE$ are conjugated, based on their mood-tense. In its basic form, a verb  with the -ath suffix expresses the infinite mood: this refers to the verb itself. The infinite is rarely found alone however: in most cases, the verb is conjugated into some other tense. Such conjugation is not formed by replacing the suffix (as in noun declensions), but instead by adding, immediately before the verb at the infinitive, a particular preposition. The following table gives an overall layout of this arrangement
-&lt;br&gt;
-
-|!Tense|!Preposition|!English equivalent/Usage|
-|Infinitive| ∅ |Infinitive|
-|Perfect Present| ma |I go |
-|Imperfect Present| mos |I am going |
-|Perfect Past | tha |I went |
-|Imperfect Past| gos |I was going |
-|Perfect Future| di |I will have gone |
-|Imperfect Future| dis |I will be going|
-
-
-</pre>
+<div created="20160921001720939" modified="20170121031305955" tags="[[Parts of Speech]]" title="Verbs">
+<pre></pre>
 </div>
-<div created="20160922001103231" list-after="Writing &amp; Alphabet" modified="20160923090355246" tags="Topic" title="Vocabulary">
-<pre>Fusath - To buy/to purchase</pre>
+<div created="20160922001103231" list-after="Writing &amp; Alphabet" modified="20170121031328761" tags="Topic" title="Vocabulary">
+<pre></pre>
 </div>
 <div created="20160919232334916" modified="20160919235147382" tags="Phonology" title="Vowels" type="text/vnd.tiddlywiki">
 <pre>There are six vowels in the language. Since vowels are touchy stuff, examples are given in English, assuming [[received pronounciation|Received Pronounciation]]:&lt;br&gt;
